Fix dark mode text bug

--- a/src/app/features/about-me/about-me.component.scss
+++ b/src/app/features/about-me/about-me.component.scss
@@ -167,7 +167,6 @@ h3 {
 .skill-section-name {
   text-align: center;
   font-size: 20px;
-  color: $site-accent;
   // border-bottom: 1px solid $site-accent;
   margin-bottom: 15px;
 }
